discussion/kv_engine/141635/141635_rev49_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Define bootstrap interface [2.2/3]

Define a bootstrap interface during startup and allow
for starting up without any interfaces.

Change-Id: I1bf375dedddfd20902607e235bb0aaadb0d835e5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 09:25:00.000000000
Message: 
Uploaded patch set 49: New patch set was added with same tree, parent, and commit message as Patch Set 48.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 10:20:03.000000000
Message: 
Patch Set 49:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9846/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9846/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9846/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36833/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11569/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11842/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19430/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10497/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
